# coffee_bot

./: README.md  copy.sh
controls/: utils.py
non_ros_implementation/: DEVELOPMENT_NOTES.md
non_ros_implementation/STL/: Cupholder.stl
non_ros_implementation/controls/: run.sh  teleop.py
ros_ws/: experimental.pgm  experimental.yaml
ros_ws/devel/: .catkin
ros_ws/devel/include/nuturtle_robot/: Start.h  StartRequest.h  StartResponse.h  TurtleInterfaceConfig.h
ros_ws/devel/include/nuturtlebot/: SensorData.h  WheelCommands.h
ros_ws/devel/include/phidgets_msgs/: EncoderDecimatedSpeed.h  SetDigitalOutputRequest.h  SetDigitalOutputResponse.h
ros_ws/devel/include/pose_follower/: PoseFollowerConfig.h
ros_ws/devel/include/universal_teleop/: Control.h  Event.h
ros_ws/devel/lib/imu_filter_madgwick/: imu_filter_node
ros_ws/devel/lib/nuslam/: odometer
ros_ws/devel/lib/nuturtle_robot/: real_waypoint  rotation  translation  turtle_interface
ros_ws/devel/lib/phidgets_high_speed_encoder/: phidgets_high_speed_encoder_node
ros_ws/src/: Project_Notes.md
ros_ws/src/coffee_bot/: CMakeLists.txt  README.md
ros_ws/src/default_coffeebot_pkgs/: README.md  onboard_ros.bash
ros_ws/src/default_coffeebot_pkgs/coffeebot_interface/: CMakeLists.txt  package.xml
ros_ws/src/default_coffeebot_pkgs/coffeebot_interface/launch/: test_coffeebot_interface.launch
ros_ws/src/default_coffeebot_pkgs/coffeebot_interface/scripts/: coffeebot_interface  utils.py  wheel_encoder_publisher.py  wheel_vel_executioner.py
ros_ws/src/onboard_pkgs/: local_ricomachine.bash
(+483 files in other folders)
