<?xml version="1.0"?>
<package format="2">
  <name>coffeebot_interface</name>
  <version>0.0.0</version>
  <description>The coffeebot_interface package</description>
  <maintainer email="ruotongjia2020@u.northwestern.edu">ricojia</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>

  </export>
</package>
